# Letters

./: .coverage  .gitignore  LICENSE  README.md  pyproject.toml
.claude/: settings.local.json
frontend/: components.d.ts  cypress.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js  vitest.config.js
frontend/cypress/e2e/: builder.cy.js  dashboard.cy.js  recipients.cy.js
frontend/cypress/support/: commands.js
frontend/src/: App.vue  blockPresets.js  blockSchema.js  fonts.js  main.js  style.css
frontend/src/__tests__/: editorStore.test.js  fonts.test.js  modal_theming.test.js  rich_text_style_inheritance.test.js  useContentEditable.test.js
frontend/src/components/: BlockAdderRow.vue  BlockWrapper.vue  BuilderToolbar.vue  CampaignSettings.vue  ColorPicker.vue  DateRangeControl.vue  DoctypeTab.vue  FieldControl.vue  ImageUploader.vue  Inspector.vue  LayersPanel.vue  LetterCard.vue  LetterSettings.vue  LetterThumbnail.vue  NotificationCard.vue  NotificationsTab.vue  PropRow.vue  RecipientsModal.vue  RecipientsPicker.vue  SendModal.vue  (+2 more)
letters/: hooks.py  install.py  patches.txt
letters/letters/: api.py  permissions.py
letters/patches/: v1_remove_autoname_property_setters.py  v1_rename_letter_folder_to_letter_category.py
letters/tests/: test_api.py  test_block_renderers.py  test_campaign_doc.py  test_design_tree_processor.py  test_fonts.py  test_template_fixtures.py
letters/www/: letters_unsubscribe.html  letters_unsubscribe.py
scripts/: build_templates.py  gen_email_assets.mjs  gen_logos.py  gen_templates.py
(+117 files in other folders)
