[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "letters"
version = "0.1.0"
description = "Visual email design and campaign system for Frappe"
readme = "README.md"
license = { text = "AGPL-3.0" }
requires-python = ">=3.10"
dependencies = []

[project.urls]
Homepage = "https://github.com/palkanp/Letters"
